--- a/src/ui/fx/Test.fxml
+++ b/src/ui/fx/Test.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<AnchorPane prefHeight="227.0" prefWidth="321.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+<AnchorPane prefHeight="227.0" prefWidth="321.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane prefHeight="242.0" prefWidth="321.0">
          <children>
             <JFXButton layoutX="131.0" layoutY="121.0" />
+            <JFXTextField layoutX="77.0" layoutY="48.0" />
          </children>
       </Pane>
    </children>
