--- a/src/ui/fx/Test.fxml
+++ b/src/ui/fx/Test.fxml
@@ -1,17 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="227.0" prefWidth="321.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="668.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.fx.TestController">
    <children>
-      <Pane prefHeight="242.0" prefWidth="321.0">
-         <children>
-            <JFXButton layoutX="131.0" layoutY="121.0" />
-            <JFXTextField layoutX="77.0" layoutY="48.0" />
-         </children>
-      </Pane>
+      <SplitPane dividerPositions="0.5" layoutX="-60.0" layoutY="-285.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <Label fx:id="compressionLabel" layoutX="-1.0" layoutY="-4.0" prefHeight="84.0" prefWidth="318.0" text="Compression">
+                     <font>
+                        <Font name="System Font" size="25.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="dragNdropLabel" layoutX="111.0" layoutY="95.0" prefHeight="84.0" prefWidth="87.0" text="Label" />
+                  <JFXTextField fx:id="clockTextField" layoutX="79.0" layoutY="348.0" text="clock" />
+                  <JFXTextField fx:id="epiTextField" layoutX="79.0" layoutY="398.0" text="epi" />
+                  <JFXTextField fx:id="emTextField" layoutX="79.0" layoutY="448.0" text="em" />
+                  <JFXTextField fx:id="elTextField" layoutX="79.0" layoutY="498.0" />
+                  <JFXComboBox fx:id="methodsComboBox" layoutX="73.0" layoutY="207.0" prefHeight="27.0" prefWidth="155.0" />
+                  <Label fx:id="energyParametersLabel" layoutX="102.0" layoutY="313.0" text="Energy parameters" />
+                  <JFXButton fx:id="provaButton" layoutX="125.0" layoutY="569.0" onAction="#print" text="PROVA" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+        </items>
+      </SplitPane>
    </children>
 </AnchorPane>
