--- a/src/test/Test.fxml
+++ b/src/test/Test.fxml
@@ -1,36 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="668.0" prefWidth="626.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.TestController">
-   <children>
-      <SplitPane dividerPositions="0.5" layoutX="-60.0" layoutY="-285.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <Label fx:id="compressionLabel" layoutX="-1.0" layoutY="-4.0" prefHeight="84.0" prefWidth="318.0" text="Compression">
-                     <font>
-                        <Font name="System Font" size="25.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="dragNdropLabel" layoutX="111.0" layoutY="95.0" prefHeight="84.0" prefWidth="87.0" text="Label" textAlignment="CENTER" />
-                  <JFXTextField fx:id="clockTextField" layoutX="79.0" layoutY="348.0" promptText="clock" />
-                  <JFXTextField fx:id="epiTextField" layoutX="79.0" layoutY="398.0" promptText="epi" />
-                  <JFXTextField fx:id="emTextField" layoutX="79.0" layoutY="448.0" promptText="em" />
-                  <JFXTextField fx:id="elTextField" layoutX="79.0" layoutY="498.0" promptText="el" />
-                  <JFXComboBox fx:id="methodsComboBox" layoutX="73.0" layoutY="207.0" prefHeight="27.0" prefWidth="155.0" />
-                  <Label fx:id="energyParametersLabel" layoutX="102.0" layoutY="313.0" text="Energy parameters" />
-                  <JFXButton fx:id="provaButton" layoutX="125.0" layoutY="569.0" onAction="#print" text="PROVA" />
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
-        </items>
-      </SplitPane>
-   </children>
+	<children>
+		<SplitPane dividerPositions="0.22077922077922077" minHeight="420.0" minWidth="700.0" prefHeight="417.0" prefWidth="926.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+			<items>
+				<AnchorPane fx:id="pane" minHeight="0.0" minWidth="200" prefHeight="415.0" prefWidth="200">
+					<children>
+						<Label fx:id="compressionLabel" alignment="CENTER" layoutX="-1.0" layoutY="-4.0" prefHeight="84.0" prefWidth="318.0" text="Compression" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
+							<font>
+								<Font name="System Font" size="25.0" />
+							</font>
+						</Label>
+						<JFXTextField fx:id="clockTextField" alignment="CENTER" layoutX="79.0" layoutY="348.0" promptText="clock" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" />
+						<JFXTextField fx:id="epiTextField" alignment="CENTER" layoutX="79.0" layoutY="398.0" promptText="epi" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" />
+						<JFXTextField fx:id="emTextField" alignment="CENTER" layoutX="79.0" layoutY="448.0" promptText="em" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" />
+						<JFXTextField fx:id="elTextField" alignment="CENTER" layoutX="79.0" layoutY="498.0" promptText="el" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" />
+						<JFXComboBox fx:id="methodsComboBox" layoutX="73.0" layoutY="207.0" prefHeight="27.0" prefWidth="155.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+						<Label fx:id="dragNdropLabel" onDragExited="#captureFileName" alignment="CENTER" layoutX="40.0" layoutY="86.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
+                     <graphic>
+      						<ImageView>
+      							<image>
+      								<Image url="@../../images/dragndrop.png" />
+      							</image>
+      						</ImageView>
+                     </graphic></Label>
+                  <Label fx:id="energyParametersLabel" alignment="CENTER" layoutX="42.0" layoutY="298.0" text="Energy parameters" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" />
+                  <JFXProgressBar layoutY="637.0" progress="0.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+					</children>
+				</AnchorPane>
+				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+			</items>
+		</SplitPane>
+	</children>
 </AnchorPane>
