--- a/src/ui/simulator/frames/MainPanel.fxml
+++ b/src/ui/simulator/frames/MainPanel.fxml
@@ -7,22 +7,45 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane minHeight="420.0" minWidth="700.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.simulator.controller.MainController">
 	<children>
-		<SplitPane dividerPositions="0.22077922077922077, 0.4458874458874459, 0.670995670995671" minHeight="420.0" minWidth="700.0" prefHeight="417.0" prefWidth="926.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		<SplitPane dividerPositions="0.22077922077922077, 0.4458874458874459, 0.5" minHeight="420.0" minWidth="700.0" prefHeight="417.0" prefWidth="926.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<items>
-				<AnchorPane minWidth="200" prefHeight="415.0" prefWidth="200" style="-fx-background-color: #D7CCC8;">
+      				<AnchorPane minWidth="177.0" prefHeight="369.0" prefWidth="177.0" style="-fx-background-color: #D7CCC8;">
                <children>
-                  <JFXProgressBar fx:id="progressCompression" progress="0.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-                  <Label alignment="CENTER" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #D7CCC8;" text="Compression" textAlignment="CENTER" textFill="#3E2723">
+               <JFXTextField fx:id="clockTextField" alignment="CENTER" focusColor="#3e2723" layoutX="10.0" layoutY="263.0" promptText="clock" AnchorPane.bottomAnchor="130.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      						<JFXTextField fx:id="epiTextField" alignment="CENTER" focusColor="#3e2723" layoutX="10.0" layoutY="293.0" promptText="epi" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      						<JFXTextField fx:id="emTextField" alignment="CENTER" focusColor="#3e2723" layoutX="10.0" layoutY="323.0" promptText="em" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      						<JFXTextField fx:id="elTextField" alignment="CENTER" focusColor="#3e2723" layoutX="10.0" layoutY="353.0" promptText="el" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      						<JFXComboBox fx:id="methodsComboBox" focusColor="#3e2723" layoutX="10.0" layoutY="203.0" prefHeight="27.0" prefWidth="155.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="203.0" />
+      						<Label fx:id="dragNdropLabel" alignment="CENTER" layoutX="40.0" layoutY="56.0" onDragExited="#captureFileName" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="56.0">
+                     <graphic>
+                        <ImageView fitHeight="100.0" fitWidth="100.0">
+                           <image>
+                              <Image url="@../../../../images/drag.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Label>
+                  <Label fx:id="energyParametersLabel" alignment="CENTER" layoutX="10.0" layoutY="244.0" text="Energy parameters" textFill="#3e2723" AnchorPane.bottomAnchor="157.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+                  <JFXProgressBar fx:id="progressCompression" layoutY="394.0" progress="0.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                  <Label alignment="CENTER" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #D7CCC8;" text="Compression" textAlignment="CENTER" textFill="#3E2723" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <font>
                         <Font name="System Font Regular" size="25.0" />
                      </font>
                   </Label>
-               </children></AnchorPane>
+                  <Label fx:id="fileNameLabel" layoutX="72.0" layoutY="171.0" textFill="#3e2723" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="171.0">
+                     <font>
+                        <Font size="11.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
 				<AnchorPane minWidth="200" prefHeight="415.0" prefWidth="200" style="-fx-background-color: #D7CCC8;"> 
 					<children>
                   <Label fx:id="polynomialDescription" alignment="TOP_LEFT" layoutX="13.0" layoutY="229.0" prefHeight="91.0" prefWidth="174.0" textAlignment="JUSTIFY" textFill="#3E2723" wrapText="true" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
